--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
             {
                 "label": "High Hopes",
                 "uiTheme": "vs-dark",
-                "path": "./asd.json"
+                "path": "./theme.json"
             }
         ],
         "configuration": {
@@ -38,6 +38,8 @@
         "@babel/node": "^7.8.7",
         "babel-node": "0.0.1-security",
         "color-shift": "git+https://github.com/tuomashatakka/color-shift.git",
+        "eslint": "^7.0.0",
+        "flow-bin": "^0.124.0",
         "json5": "^2.1.1",
         "less": "^3.11.1"
     }
