--- a/themes/palette.json5
+++ b/themes/palette.json5
@@ -1,13 +1,20 @@
 {
-  foreground: '#f0e7e7',
-  light:      '#e0d7d7',
-  medium:     '#7d7f91',
-  dimmed:     '#343442',
-  background: '#2c2c31',
+  foreground: '#ffece9',
+  // foreground: '#e4e0f9',
+  light:      '#bfbdef',
+  medium:     '#847c9f',
+  dimmed:     '#585266',
+  background: '#42404f',
   red:        '#ef5258',
-  orange:     '#e6c881',
-  yello:      '#f7f79c',
-  green:      '#52efa8',
+  orange:     '#f6b891',
+  yellow:     '#f7f79c',
+  green:      '#7bf0ae',
+  turquoise:  '#8adedd',
   blue:       '#5852ef',
   purple:     '#7862af',
+
+  definition: '#99ffcc',
+  keyword:    '#c092cf',
+  storage:    '#9090b7',
+  function:   '#90a2af',
 }
