--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "extends": "@tuomashatakka",
   "rules": {
-    "block-padding/functions":        [ 1, 1, { "strategy": "at-least" }],
-    "block-padding/arrow-functions":  [ 1, 2, { "strategy": "at-most" }]
+    "block-padding/functions":        [ 1, 1, { "strategy": "at-least" }]
   }
 }
