--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "High Hopes",
     "description": "lit af",
     "version": "0.0.1",
+    "type": "module",
     "engines": {
         "vscode": "^1.42.0"
     },
@@ -37,10 +38,13 @@
         "@babel/core": "^7.8.7",
         "@babel/node": "^7.8.7",
         "babel-node": "0.0.1-security",
-        "color-shift": "git+https://github.com/tuomashatakka/color-shift.git",
+        "color-shift": "^0.0.0",
         "eslint": "^7.0.0",
         "flow-bin": "^0.124.0",
         "json5": "^2.1.3",
         "less": "^3.11.1"
+    },
+    "repository": {
+        "url": "https://github.com"
     }
 }
